--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^7.1.19",
     "@tensorflow/tfjs": "^4.22.0",
     "expo": "~54.0.23",
-    "expo-camera": "^17.0.9",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-gl": "^16.0.7",
@@ -25,6 +25,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
