--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-firebase/app": "^23.5.0",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
